--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -4,7 +4,7 @@
         <title>Authentication</title>
     </head>
     <body>
-        <h1>Home</h1>
+        <h1>User Login</h1>
         <nav>
             <ul>
                 <li><a href="{% url 'login' %}">Login</a></li>
