--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,23 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Authentication</title>
-    </head>
-    <body>
-        <h1>Home</h1>
-        <nav>
-            <ul>
-                <li><a href="{% url 'login' %}">Login</a></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Profile</a></li>
-            </ul>
-        </nav>
-        <hr>
-        {% if messages %}
-        <div>
-            {% for message in messages %} {{ message }} {% endfor %}
-        </div>
-        {% endif %}
-    </body>
-</html>
+{% extends 'base.html' %} 
+{% block page_title %}Home Page{% endblock %} 
+{% block page_heading %}Home{% endblock %}
