--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Authentication</title>
-    </head>
-    <body>
-        <h1>User Login</h1>
-        <nav>
-            <ul>
-                <li><a href="{% url 'login' %}">Login</a></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Profile</a></li>
-            </ul>
-        </nav>
-        <hr>
-        {% if messages %}
-        <div>
-            {% for message in messages %} {{ message }} {% endfor %}
-        </div>
-        {% endif %}
-    </body>
-</html>
+{% extends 'base.html' %} 
+
+{% block page_title %}Login Page{% endblock %} 
+
+{% block page_heading %}User Login{% endblock %}
+
+{% block content %}
+
+<form method="POST">
+    {% csrf_token %} 
+        {{ login_form }}
+    <button type="submit">Login</button>
+</form>
+{% endblock %}
