--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default">
         <ul class="nav navbar-nav">
             {% if user.is_authenticated %}
-                <li><a href="#">Profile</a></li>
+                <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             {% else %}
                 <li><a href="{% url 'login' %}">Login</a></li>
