Added the ability to use email instead of username

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -11,4 +11,6 @@
         {{ login_form }}
     <button type="submit">Login</button>
 </form>
+
+<p><a href="{% url 'password_reset' %}">Reset Password</a></p>
 {% endblock %}
