Created new tickets app

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,3 +1,6 @@
 {% extends 'base.html' %} 
 {% block page_title %}Home Page{% endblock %} 
 {% block page_heading %}Home{% endblock %}
+{% block content %}
+
+{% endblock %}
