Changed the footer to a sticky one at the bottom

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <p>Designed by Darren Messenger</p>
+            <span class="text-muted">Designed by Darren Messenger</span>
         </div>
     </footer>
 </body>
