--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,10 +17,8 @@ body {
   bottom: 0;
   width: 100%;
   height: 60px;
-  /* Set the fixed height of the footer here */
   line-height: 60px;
-  /* Vertically center the text there */
-  background-color: #f5f5f5;
+  background-color:#ADD8E6;
 }
 
 @media screen and (min-width: 768px) {
