--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,11 @@
 <html>
 
 <head>
-    <title>{% block page_title %}{% endblock %}</title>
+    <title>IssueTracker{% block page_title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css">
+    <script src="https://kit.fontawesome.com/c46cd61739.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     {% block head_js %}
     {% endblock head_js %}
@@ -15,6 +16,9 @@
 <body>
     <nav class="navbar navbar-default">
         <ul class="nav navbar-nav">
+            <!--<div class="nav-home">-->
+            <li>   <a href="{% url 'index' %}"><i class="fas fa-hands fa-2x"></i></a></li>
+            <!--</div>-->
             {% if user.is_authenticated %}
                 <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
@@ -25,6 +29,7 @@
             {% endif %}
         </ul>
     </nav>
+   
      <h1>
         {% block page_heading %}{% endblock %}
     </h1>
