--- a/tickets/templates/issuetrackerticketform.html
+++ b/tickets/templates/issuetrackerticketform.html
@@ -5,6 +5,6 @@
     <form method="POST" class="col-md-12" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form | as_bootstrap }}
-        <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Create Issue</a>
+        <a href="{% url 'get_tickets' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Create Issue</a>
     </form>
 {% endblock %}
