made some changes to the tickets app

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -3,11 +3,12 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1 class="display-4">Issue Tracker</h1>
-    <p>Track your issues and bugs, and even request a new feature!</p>
+    <h1>Issue Tracker</h1>
+    <h3>Welcome {{ user.username }} to the Issue Tracker</h3>
+    <h4>Track your issues and bugs, and even request a new feature!</h4>
     <hr>
-    <p>Welcome to the Issue Tracker, a community-driven site where you can report bugs or request features.</p>
-    <p>Buy us a coffee? If you would like to make a one time donation then please click the button!</p>
+    <h5>Welcome to the Issue Tracker, a community-driven site where you can report bugs or request features.</h5>
+    <h5>Buy us a coffee? If you would like to make a one time donation then please click the button!</h5>
     <a href="{% url 'checkout' %}" class="btn btn-success btn-lg" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Donate</a>
 </div>
 <div>
