--- a/tickets/templates/issuetrackertickets.html
+++ b/tickets/templates/issuetrackertickets.html
@@ -4,9 +4,10 @@
         <div class="row">
             <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-img" href="#">
-                    <img src="/media/img/profile.jpg" class="img-circle">
+                    <div  class="fas fa-edit fa-3x">
+                        <!--<img src="/media/img/profile.jpg" class="img-circle" height=90px>-->
+                    </div>
                 </a>
-                <p><span class="boldtext">Author:</span> Darren Messenger</p>
             </div>
             <div class="col-md-10 col-sm-9">
                 <h3>{{ ticket.title }}</h3>
@@ -16,7 +17,7 @@
                         <p><a href="{% url 'ticket_detail' ticket.id %}"  class="btn btn-default">Read more</a></p>
                         <p><span class="boldtext">Published on:</span> {{ ticket.published_date }} </p>
                         <p><span class="boldtext">Views:</span> {{ticket.views}}</p>
-                        <p><span class="boldtext">Tag:</span> {{ ticket.tag }}</p>
+                        <p><span class="boldtext">Upvotes:</span> {{ ticket.upvotes }}</p>
                     </div>
                 </div>
             </div>
