--- a/tickets/templates/ticketdetail.html
+++ b/tickets/templates/ticketdetail.html
@@ -5,7 +5,6 @@
             <a class="story-img" href="#">
                 <img src="/media/img/profile.jpg" class="img-circle">
             </a>
-            <p><span class="boldtext">Author:</span> Darren Messenger</p>
         </div>
         <div class="col-sm-10 col-md-9">
             {% if ticket.image %}
@@ -17,7 +16,7 @@
                     <p>{{ ticket.content }}</p>
                     <p><span class="boldtext">Published on:</span> {{ ticket.published_date }} </p>
                     <p><span class="boldtext">Views:</span> {{ticket.views}}</p>
-                    <p><span class="boldtext">Tag:</span> {{ ticket.tag }}</p>
+                    <p><span class="boldtext">Upvotes:</span> {{ ticket.upvotes }}</p>
                     <a href="{% url 'get_tickets' %}" class="btn btn-default">Back to tickets</a>
                     <a href="{% url 'edit_ticket' ticket.id %}" class="btn btn-default">Edit ticket</a>
                     <hr>
