Added the ability to vote for an issue

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -8,7 +8,7 @@
     <h4>Track your issues and bugs, and even request a new feature!</h4>
     <hr>
     <h5>Welcome to the Issue Tracker, a community-driven site where you can report bugs or request features.</h5>
-    <h5>Buy us a coffee? If you would like to make a one time donation then please click the button!</h5>
+    <h5><i class="fas fa-mug-hot fa-1x"> </i>  Buy us a coffee? If you would like to make a one time donation then please click the button!</h5>
     <a href="{% url 'checkout' %}" class="btn btn-success btn-lg" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Donate</a>
 </div>
 <div>
