--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,18 +1,20 @@
 {% extends 'base.html' %} 
-
 {% load bootstrap_tags %}
-
 {% block page_title %}Login Page{% endblock %} 
-
-{% block page_heading %}User Login{% endblock %}
-
 {% block content %}
 
-<form method="POST">
-    {% csrf_token %} 
-        {{ login_form | as_bootstrap }}
-    <button type="submit" class = "btn btn-default">Login</button>
-</form>
+<div class="jumbotron">
+    <div class="row">
+        <div class="col-sm-8">
+             <h1>  Login Page </h1>
+                <form method="POST">
+                    {% csrf_token %} 
+                        {{ login_form | as_bootstrap }}
+                    <button type="submit" class = "btn btn-default">Login</button>
+                </form>
+            <p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+        </div>
+    </div>
+</div>
 
-<p><a href="{% url 'password_reset' %}">Reset Password</a></p>
 {% endblock %}
