--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %} 
-
 {% load bootstrap_tags %}
-
 {% block page_title %}Registration Page{% endblock %} 
-
-{% block page_heading %}User Registration{% endblock %}
-
 {% block content %}
-<p>If you already have an account, you can <a href="{% url 'login' %}">sign in </a></p>
-<form method="POST">
-    {% csrf_token %} 
-        {{ registration_form | as_bootstrap }}
-    <button type="submit" class="btn btn-default">Register</button>
-</form>
+<div class="jumbotron">
+    <div class="row">
+        <div class="col-sm-8">
+          <h1>  Registration Page </h1>
+            <p>If you already have an account, you can <a href="{% url 'login' %}">sign in </a></p>
+            <form method="POST">
+                {% csrf_token %} 
+                    {{ registration_form | as_bootstrap }}
+                <button type="submit" class="btn btn-default">Register</button>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
