--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,15 @@ body {
   /* Margin bottom by footer height */
 }
 
+.notepad-image {
+    padding-top: 30px;
+    background-color:#ADD8E6;
+}
+
+.upvote{
+  background-color: green;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
