--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             {% if user.is_authenticated %}
                 <li><a href="{% url 'profile' %}">Profile</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
-                <li><a href="{% url 'new_ticket' %}">New Ticket</a></li>
+                <li><a href="{% url 'new_ticket' %}">New Issue</a></li>
                 
             {% else %}
                 <li><a href="{% url 'login' %}">Login</a></li>
