--- a/tickets/templates/issuetrackertickets.html
+++ b/tickets/templates/issuetrackertickets.html
@@ -3,14 +3,14 @@
     {% for ticket in tickets %}
         <div class="row">
             <div class="col-md-2 col-sm-3 text-center">
-                <a class="story-img" href="#">
-                    <div  class="fas fa-edit fa-3x">
-                        <!--<img src="/media/img/profile.jpg" class="img-circle" height=90px>-->
-                    </div>
+                <a href="{% url 'ticket_detail' ticket.id %}">
+                    <img src="/media/img/notepad.jpg" class="img-circle" height=90px>
                 </a>
             </div>
             <div class="col-md-10 col-sm-9">
-                <h3>{{ ticket.title }}</h3>
+                <h3>{{ ticket.title }}
+                <a href="{% url 'ticket_vote_list' pk=ticket.pk %}" {{ ticket.upvote }}<p><span title="Click here to vote for this issue" class="badge">{{ ticket.upvotes }} <span class="glyphicon glyphicon-arrow-up upvote"></span></span></p></a>
+                </h3>
                 <div class="row">
                     <div class="col-xs-9">
                         <p>{{ ticket.content|truncatewords:50 }}</p>
