--- a/tickets/templates/ticketdetail.html
+++ b/tickets/templates/ticketdetail.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-2 col-sm-3 text-center">
             <a href="{% url 'ticket_detail' ticket.id %}">
-                <img src="/media/img/notepad.jpg" class="img-circle" height=90px>
+                <img src="/media/img/bug.jpg" class="img-circle" height=90px>
             </a>
         </div>
         <div class="col-sm-10 col-md-9">
