--- a/tickets/templates/issuetrackertickets.html
+++ b/tickets/templates/issuetrackertickets.html
@@ -9,8 +9,9 @@
             </div>
             <div class="col-md-10 col-sm-9">
                 <h3>{{ ticket.title }}
-                <a href="{% url 'ticket_vote_list' pk=ticket.pk %}" {{ ticket.upvote }}<p><span title="Click here to vote for this issue" class="badge">{{ ticket.upvotes }} <span class="glyphicon glyphicon-arrow-up upvote"></span></span></p></a>
+                    <a href="{% url 'ticket_vote_list' pk=ticket.pk %}" {{ ticket.upvote }}<p><span title="Click here to vote for this issue" class="badge">{{ ticket.upvotes }} <span class="glyphicon glyphicon-arrow-up upvote"></span></span></p></a>
                 </h3>
+                <h2>{{ ticket.author }}</h2>
                 <div class="row">
                     <div class="col-xs-9">
                         <p>{{ ticket.content|truncatewords:50 }}</p>
