--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,7 +27,8 @@ body {
   width: 100%;
   height: 60px;
   line-height: 60px;
-  background-color:#ADD8E6;
+  text-align: center;
+  background-color:#e3f2fd;
 }
 
 @media screen and (min-width: 768px) {
