Amended the footer and fixed the static files not being picked up

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -9,10 +9,10 @@
     <hr>
     <h5>Welcome to the Issue Tracker, a community-driven site where you can report bugs or request features.</h5>
     <h5><i class="fas fa-mug-hot fa-1x"> </i>  Buy us a coffee? If you would like to make a one time donation then please click the button!</h5>
-    <a href="{% url 'checkout' %}" class="btn btn-success btn-lg" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Donate</a>
-</div>
-<div>
-    <a href="{% url 'get_tickets' %}" class="btn btn-primary">All Open Issues &rsaquo;</a>
+    <a href="{% url 'checkout' %}" class="btn btn-success btnmdg" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Donate</a>
+    <div>
+    <a href="{% url 'get_tickets' %}" class="btn btn-primary all_issues  btn-md">All Open Issues &rsaquo;</a>
+    </div>
 </div>
         
 {% endblock %}
