--- a/tickets/templates/issuetrackertickets.html
+++ b/tickets/templates/issuetrackertickets.html
@@ -1,31 +1,33 @@
 {% extends 'base.html' %}
 {% block content %}
     {% for ticket in tickets %}
-        <div class="row">
-            <div class="col-md-2 col-sm-3 text-center">
-                {% if ticket.ticket_type == 'BUG' %}
-                    <a href="{% url 'ticket_detail' ticket.id %}"><img src="/media/img/bug.jpg" class="img-circle" height=90px></a>
-                {% else %}
-                    <a href="{% url 'ticket_detail' ticket.id %}"><img src="/media/img/new_feature.jpg" class="img-circle" height=90px></a>
-                {% endif %}
-            </div>
-            <div class="col-md-10 col-sm-9">
-                <h3>{{ ticket.title }}
-                    <a href="{% url 'ticket_vote_list' pk=ticket.pk %}" {{ ticket.upvote }}<p><span title="Click here to vote for this issue" class="badge">{{ ticket.upvotes }} <span class="glyphicon glyphicon-arrow-up upvote"></span></span></p></a>
-                </h3>
-                <h2>{{ ticket.author }}</h2>
-                <div class="row">
-                    <div class="col-xs-9">
-                        <p>{{ ticket.content|truncatewords:50 }}</p>
-                        <p><span class="boldtext">Ticket Type:</span> {{ ticket.ticket_type }} </p>
-                        <p><a href="{% url 'ticket_detail' ticket.id %}"  class="btn btn-default">Read more</a></p>
-                        <p><span class="boldtext">Published on:</span> {{ ticket.published_date }} </p>
-                        <p><span class="boldtext">Views:</span> {{ticket.views}}</p>
-                        <p><span class="boldtext">Upvotes:</span> {{ ticket.upvotes }}</p>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-2 col-sm-3 text-center">
+                    {% if ticket.ticket_type == 'BUG' %}
+                        <a href="{% url 'ticket_detail' ticket.id %}"><img src="/media/img/bug.jpg" class="img-circle" height=90px></a>
+                    {% else %}
+                        <a href="{% url 'ticket_detail' ticket.id %}"><img src="/media/img/new_feature.jpg" class="img-circle" height=90px></a>
+                    {% endif %}
+                </div>
+                <div class="col-md-10 col-sm-9">
+                    <h3>{{ ticket.title }}
+                        <a href="{% url 'ticket_vote_list' pk=ticket.pk %}" {{ ticket.upvote }}<p><span title="Click here to vote for this issue" class="badge">{{ ticket.upvotes }} <span class="glyphicon glyphicon-arrow-up upvote"></span></span></p></a>
+                    </h3>
+                    <h2>{{ ticket.author }}</h2>
+                    <div class="row">
+                        <div class="col-xs-9">
+                            <p>{{ ticket.content|truncatewords:50 }}</p>
+                            <p><span class="boldtext">Ticket Type:</span> {{ ticket.ticket_type }} </p>
+                            <p><a href="{% url 'ticket_detail' ticket.id %}"  class="btn btn-default">Read more</a></p>
+                            <p><span class="boldtext">Published on:</span> {{ ticket.published_date }} </p>
+                            <p><span class="boldtext">Views:</span> {{ticket.views}}</p>
+                            <p><span class="boldtext">Upvotes:</span> {{ ticket.upvotes }}</p>
+                        </div>
                     </div>
                 </div>
+                <hr>
             </div>
-            <hr>
         </div>
     {% endfor %}
 {% endblock %}
