Created collapseable navbar and footer with social links.

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,18 +28,37 @@
 
 <body>
     <nav class="navbar navbar-default">
-        <ul class="nav navbar-nav">
-            <li>   <a href="{% url 'index' %}"><i class="fas fa-hands fa-2x"></i></a></li>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'profile' %}">Profile</a></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                <li><a href="{% url 'new_ticket' %}">New Issue</a></li>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                    aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'index' %}"><i class="fas fa-hands-helping"></i> IssueTracker</a>
+            </div>
+    
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'get_tickets' %}"><i class="fa fa-list"></i> Issues</a></li>
+                    <li><a href="{% url 'new_ticket' %}"><i class="fa fa-plus"></i>  New Issue</a></li>
+                </ul>
                 
-            {% else %}
-                <li><a href="{% url 'login' %}">Login</a></li>
-                <li><a href="{% url 'registration' %}">Register</a></li>
-            {% endif %}
-        </ul>
+                <ul class="nav navbar-nav navbar-right">
+                                       
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> {{ user.username }}</a></li>
+                    <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Logout</a></li>
+                    {% else %}
+                    <li><a href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Login</a></li>
+                    <li><a href="{% url 'registration' %}"><i class="fa fa-user-plus"></i> Register</a></li>
+                    {% endif %}
+                    
+                </ul>
+            </div>
+        </div>
     </nav>
    
      <h1>
