--- a/templates/base.html
+++ b/templates/base.html
@@ -74,13 +74,13 @@
     {% endif %} 
     <div class="container">
         <div class="row">
-            <div class="col-md-9">
+            <!--<div class="col-md-10">-->
                 <div class="panel">
                     <!--ticket entries-->
                     {% block content %}{% endblock %}
                     <!--ticket entries-->
                 </div>
-            </div>
+            <!--</div>-->
         </div>
     </div>
     <footer class="footer footer-default">
