--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -3,12 +3,20 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1 class="text-centre">Issue Tracker</h1>
-    <h3 class="text-centre">Welcome {{ user.username }} to the Issue Tracker</h3>
+    <h1 class="text-centre"><i class="fas fa-hands-helping"></i> Issue Tracker</h1>
+    {% if user.is_authenticated %}
+        <h3 class="text-centre">Welcome {{ user.username }} to the Issue Tracker</h3>
+    {% else %}
+        <h3 class="text-centre">Welcome to the Issue Tracker</h3>
+        <h4 class="text-centre">In order to use this site to its full capacity please <a href="{% url 'login' %}">sign in </a></h4>
+    {% endif %}
     <h4 class="text-centre">Track your issues and bugs, and even request a new feature!</h4>
     <hr>
-    <h5 class="text-centre">Welcome to the Issue Tracker, a community-driven site where you can report bugs or request features.</h5>
+    <h5 class="text-centre">Welcome to the Issue Tracker, a community-driven site where you can issue a new ticket to report bugs or request a new feature!</h5>
+    <h5 class="text-centre">Tickets can be of two types: BUGS and NEW FEATURES.</h5>
+    <h5 class="text-centre">If you have the same issue as described in another one of the tickets, you can upvote it.</h5>
     <h5 class="text-centre"><i class="fas fa-mug-hot fa-1x"> </i>  Buy us a coffee? If you would like to make a one time donation then please click the button!</h5>
+    <hr>
     <a href="{% url 'checkout' %}" class="btn btn-success btn-md" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Donate</a>
     <a href="{% url 'get_tickets' %}" class="btn btn-primary all_issues btn-md">All Open Issues &rsaquo;</a>
 </div>
