--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -3,14 +3,16 @@
 {% block content %}
 <div class="jumbotron">
   <div class="row">
-    <div class="col-sm-8 profile-info">
-      <h1>  Profile </h1>
-      <h2>  {{ user }} </21>
-      <p class="lead">{{ profile.user.email }}</p>
-      <h4>eMail: {{ profile.email }}</h4>
+    <div class="profile-info">
+      <h2 class="text-centre"><i class="fa fa-user"></i>  Profile </h2>
       <hr>
-      <h5><i class="fas fa-mug-hot fa-2x"></i> Buy us a coffee? If you would like to make a one time donation then please click the button!</h5>
-    <a href="{% url 'checkout' %}" class="btn btn-success btn-lg" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Donate</a>
+      <h3 class="text-centre">  {{ user }} <h3>
+      <p class="lead">{{ profile.user.email }}</p>
+      <h4 class="text-centre">eMail: {{ profile.email }}</h4>
+      <hr>
+      <h5 class="text-centre"><i class="fas fa-mug-hot fa-2x"></i> Buy us a coffee? If you would like to make a one time donation then please click the button!</h5>
+      <hr>
+    <a href="{% url 'checkout' %}" class="btn btn-success btn-md" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Donate</a>
     </div>
   </div>
 </div>
