--- a/tickets/templates/ticketdetail.html
+++ b/tickets/templates/ticketdetail.html
@@ -2,6 +2,8 @@
 {% block content %}
     <div class="jumbotron">
         <div class="row">
+            <h2> <i class="fa fa-list"></i> Issue Detail </h2>
+            <hr>
             <div class="col-md-2 col-sm-3 text-center">
                  {% if ticket.ticket_type == 'BUG' %}
                         <a href="{% url 'ticket_detail' ticket.id %}"><img src="/media/img/bug.jpg" class="img-circle" height=90px></a>
@@ -10,16 +12,18 @@
                     {% endif %}
             </div>
             <div class="col-sm-10 col-md-9">
-                {% if ticket.image %}
-                    <img class="img-blogpost" src="/media/{{ post.image }}">
-                {% endif %}
                 <h3>{{ ticket.title }}
-                    <a href="{% url 'ticket_vote' pk=ticket.pk %}" {{ ticket.upvote }}<p><span title="Click here to vote for this issue" class="badge">{{ ticket.upvotes }} <span class="glyphicon glyphicon-arrow-up"></span></span></p></a>
+                    <a href="{% url 'ticket_vote' pk=ticket.pk %}" {{ ticket.upvote }}<p><span title="Click here to vote for this issue" class="badge upvote">{{ ticket.upvotes }} <span class="glyphicon glyphicon-arrow-up"></span></span></p></a>
                 </h3>
                 <div class="row">
                     <div class="col-xs-9">
                         <p>{{ ticket.content }}</p>
                         <p><span class="boldtext">Ticket Type:</span> {{ ticket.ticket_type }} </p>
+                        {% if ticket.image %}
+                            <div class="issue-img">
+                                <img src="{{ MEDIA_URL }}{{ ticket.image }}" class="image-to-zoom">
+                            </div>
+                        {% endif %}
                         <p><span class="boldtext">Published on:</span> {{ ticket.published_date }} </p>
                         <p><span class="boldtext">Views:</span> {{ticket.views}}</p>
                         <p><span class="boldtext">Upvotes:</span> {{ ticket.upvotes }}</p>
@@ -32,4 +36,22 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function() {
+        // Resize image on click with animation
+        $('.image-to-zoom').on('click', function() {
+            if ($(this).width() === 200) {
+                $(this).animate({
+                    width: "100%",
+                    maxWidth: "90vw"
+                }, 700);
+            } else {
+                $(this).animate({
+                    width: "200px",
+                }, 700);
+            }
+        });
+    });
+</script>
 {% endblock %}
