--- a/tickets/templates/ticketdetail.html
+++ b/tickets/templates/ticketdetail.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+
+{% load static from staticfiles %}
+{% load bootstrap_tags %}
+
 {% block content %}
     <div class="jumbotron">
         <div class="row">
@@ -36,7 +40,33 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Ticket comments section -->
+    <div class="container">
+        <h4><u>Comments</u></h4>
+        <hr>
+        {% for comment in comments %}
+            
+            <p>{{ comment.comment }}</p>
+            <small>{{ comment.author }} - {{ comment.comment_date|date:"M d 'y, G:i" }}</small>
+            <hr>
+        {% endfor %}
+    </div>
+    
+    {% if user.is_authenticated %}
+    <div class="container">
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %} 
+            {{ comment_form|as_bootstrap_inline }}
+            <div class="form-actions">
+                <input type="submit" class="btn btn-primary" value="Submit" name="submit" >
+            </div>
+        </form>   
+    </div>
+    {% else %}
+    <i><a href="{% url 'login' %}">Sign in</a> to add a comment</i>
+    {% endif %}
+    
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
         // Resize image on click with animation
