--- a/templates/base.html
+++ b/templates/base.html
@@ -74,13 +74,11 @@
     {% endif %} 
     <div class="container">
         <div class="row">
-            <!--<div class="col-md-10">-->
-                <div class="panel">
-                    <!--ticket entries-->
-                    {% block content %}{% endblock %}
-                    <!--ticket entries-->
-                </div>
-            <!--</div>-->
+            <div class="panel col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                <!--ticket entries-->
+                {% block content %}{% endblock %}
+                <!--ticket entries-->
+            </div>
         </div>
     </div>
     <footer class="footer footer-default">
