--- a/tickets/templates/issuetrackertickets.html
+++ b/tickets/templates/issuetrackertickets.html
@@ -32,11 +32,11 @@
                     </h3>
                     <div class="row">
                         <div class="col-xs-9">
-                            <p>{{ ticket.content|truncatewords:50 }}</p>
-                            <p><span class="boldtext">Ticket Type:</span> {{ ticket.ticket_type }} </p>
-                            <p><span class="boldtext">Published on:</span> {{ ticket.published_date }} </p>
-                            <p><span class="boldtext">Views:</span> {{ticket.views}}</p>
-                            <p><span class="boldtext">Upvotes:</span> {{ ticket.upvotes }}</p>
+                            <h5>{{ ticket.content|truncatewords:50 }}</h5>
+                            <h5><span class="boldtext">Ticket Type:</span> {{ ticket.ticket_type }} </h5>
+                            <h6><span class="boldtext">Published on:</span> {{ ticket.published_date }} </h6>
+                            <h6><span class="boldtext">Views:</span> {{ticket.views}}</h6>
+                            <h6><span class="boldtext">Upvotes:</span> {{ ticket.upvotes }}</h6>
                             <p><a href="{% url 'ticket_detail' ticket.id %}"  class="btn btn-default">Read more</a></p>
                         </div>
                     </div>
